rš logo z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body:before {
   position: absolute;
   top: 2rem;
   right: 2rem;
+  z-index:1;
 }
 
 .rs-link img {
